# auth-onedrive

./: .~lock.data.xlsx#  AGA.xlsx  ASISTENCIA A TALLERES (respuestas)-AGA-2024-09-09-23-43-23.xlsx  README.md  data.xlsx  find_address_in_excel.py  pandas_iloc_rows_items.py  pyproject.toml  source.xlsx  source_excel.py  test.py  test1.py  test3_regex.py
auth_onedrive/: access_token.py  main.py  main2.py  main3.py  onedrive_auth.py  redirect_server.py
gui/: main.py  main2.py  testgrid.py
